--- a/Gunslinger/app/src/main/res/layout/activity_main_menu.xml
+++ b/Gunslinger/app/src/main/res/layout/activity_main_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_menu"
+    android:background="@drawable/background_menu_art"
     android:orientation="horizontal"
-    tools:context=".MainMenu">
+    tools:context=".MainMenu"
+     tools:ignore="ExtraText">
 
     <TextView
         android:id="@+id/main_menu_name"
@@ -16,35 +17,45 @@
         android:text="@string/main_activity_name"
         android:textSize="50sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/button_for_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/play_button"
+        android:background="@null"
+        android:padding="1dp"
+        android:src="@drawable/play_button_expor_notouch"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/main_menu_name"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/main_menu_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="10dp"/>
 
     <ImageButton
         android:id="@+id/button_for_exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/play_button"
+        android:layout_marginRight="124dp"
+        android:background="@null"
+        android:padding="1dp"
+        android:src="@drawable/button_for_exit_notouch_export"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/main_menu_name"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+//drown, faceless, torture
     <ImageButton
+        android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_foreground"
+        android:background="@null"
+        android:src="@drawable/wheel_settings_button_notouch_export"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/settings_button"/>
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
